--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 <h2 class="recherche-section-h2">Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception,sélectionnés par nos soins</p>
             <div class="rech-section-button">
-                    <button class="button">Explorer nos restaurants</button> 
+                    <button class="button"><a href="#restaurants">Explorer nos restaurants</button>
+                     
             </div>
             </div>
         </section>
