--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="Css/style.scss">
     <link rel="stylesheet" href="Css/normalize.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>OhMyFood</title>
+    <title>OhMyFood</title> 
 </head>
 
 <body>
@@ -54,10 +54,10 @@
             <div class="rech-section-down">
                 <h2 class="recherche-section-h2">Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception,sélectionnés par nos soins</p>
-            <div class="rech-section-button">
-                    <button class="button"><a href="#restaurants">Explorer nos restaurants</a></button>
-                     
-            </div>
+                <div class="rech-section-button">
+                    <div class="button"><a href="#restaurants">Explorer nos restaurants</a>
+                    </div>     
+                </div>
             </div>
         </section>
 
@@ -197,8 +197,10 @@
         </div>
              
         <!--commander-->
-        <div class="but">
-            <button class="but2-text">Commander</button> 
+        <div class="button">
+            <div class="but2">
+                <div class="but2-text">Commander</div> 
+            </div>
         </div>
     </div>
     </div>
