--- a/palette.html
+++ b/palette.html
@@ -65,7 +65,7 @@
             <h2 class="entrees-header-titre">ENTREES</h2>
         </div>
     <div class="entrees-cards">
-        <div class="entrees-card">
+        <div class="entrees-card card-1">
             <div class="entrees-card-header">
                 <h3 class="card-h3">Fricasée</h3>
                 <p class="card-p">Au piment d'espelette></p>
@@ -75,7 +75,7 @@
                         <i class="fas fa-check-circle" aria-hidden="true"></i>
                     </span>
         </div>
-        <div class="entrees-card">
+        <div class="entrees-card card-2">
             <div class="entrees-card-header">
                 <h3 class="card-h3">Foie gras de canard mi-cuit</h3>
                 <p class="card-p">Et ses copeaux de truffe noire</p>
@@ -85,7 +85,7 @@
                         <i class="fas fa-check-circle" aria-hidden="true"></i>
                     </span>
         </div>
-        <div class="entrees-card">
+        <div class="entrees-card card-3">
             <div class="entrees-card-header">
                 <h3 class="card-h3">Oeuf au plat</h3>
                 <p class="card-p">Assaisonné à la truffe sur lit de caviar</p>
