--- a/palette.html
+++ b/palette.html
@@ -67,7 +67,7 @@
     <div class="entrees-cards">
         <div class="entrees-card card-1">
             <div class="entrees-card-header">
-                <h3 class="card-h3">Fricasée</h3>
+                <h3 class="card-h3">Fricasée d'escargot</h3>
                 <p class="card-p">Au piment d'espelette></p>
             </div>
                 <span class="prix">25£</span>
@@ -105,8 +105,8 @@
     <div class="plats-cards">
         <div class="plats-card">
             <div class="plats-card-header">
-                <h3 class="card-h3">Fricasée</h3>
-                <p class="card-p">Au piment d'espelette></p>
+                <h3 class="card-h3">Filet de boeuf aux herbes</h3>
+                <p class="card-p">Accompagné de sa rimambelle de légumes</p>
             </div>
                 <span class="prix">25£</span>
                 <span class="card-icon">
@@ -115,8 +115,8 @@
         </div>
         <div class="plats-card">
             <div class="plats-card-header">
-                <h3 class="card-h3">Foie gras de canard mi-cuit</h3>
-                <p class="card-p">Et ses copeaux de truffe noire</p>
+                <h3 class="card-h3">Parmentier de queue de boeuf</h3>
+                <p class="card-p">A la truffe sur sa purée de panais</p>
             </div>
                 <span class="prix">35£</span>
                 <span class="card-icon">
@@ -125,8 +125,8 @@
         </div>
         <div class="plats-card">
             <div class="plats-card-header">
-                <h3 class="card-h3">Oeuf au plat</h3>
-                <p class="card-p">Assaisonné à la truffe sur lit de caviar</p>
+                <h3 class="card-h3">Filet de turbot</h3>
+                <p class="card-p">Aux agrumes</p>
             </div>
             <span class="prix">20£</span>
             <span class="card-icon">
@@ -144,8 +144,8 @@
     <div class="desserts-cards">
         <div class="desserts-card">
             <div class="desserts-card-header">
-                <h3 class="card-h3">Fricasée</h3>
-                <p class="card-p">Au piment d'espelette></p>
+                <h3 class="card-h3">Paris-Brest</h3>
+                <p class="card-p">Revisité</p>
             </div>
                     <span class="prix">25£</span>
                     <span class="card-icon">
@@ -154,8 +154,8 @@
         </div>
         <div class="desserts-card">
             <div class="desserts-card-header">
-                <h3 class="card-h3">Foie gras de canard mi-cuit</h3>
-                <p class="card-p">Et ses copeaux de truffe noire</p>
+                <h3 class="card-h3">Macaron au chocolat d'exception</h3>
+                <p class="card-p">Et glace à la vanille de Madagascar</p>
             </div>
                     <span class="prix">35£</span>
                     <span class="card-icon">
@@ -164,8 +164,8 @@
         </div>
         <div class="desserts-card">
             <div class="desserts-card-header">
-                <h3 class="card-h3">Oeuf au plat</h3>
-                <p class="card-p">Assaisonné à la truffe sur lit de caviar</p>
+                <h3 class="card-h3">Mousse au chocolat</h3>
+                <p class="card-p">Au piment d'espelette et à la truffe noire</p>
             </div>
                     <span class="prix">20£</span>
                     <span class="card-icon">
