--- a/francaise.html
+++ b/francaise.html
@@ -170,16 +170,12 @@
         </div>
         </div>
 
-        <!--commander-->
-        <div class="but">
-            <button class="button2">
-                <div class="button2-down">
-                    <div class="button2-text">Commander</div>
-                </div>
-            </button> 
-        </div>
-    </div>
-    </div>
+    <!--commander-->
+    <div class="but">
+        <div class="but2">
+            <div class="but2-text">Commander</div>
+        </div> 
+    </div>   
 
     <!--footer-->
     <footer class="footer">
