--- a/note.html
+++ b/note.html
@@ -184,15 +184,11 @@
     </div>
     </div>
         <!--commander-->
-        <div class="but">
-            <button class="button2">
-                <div class="button2-down">
-                    <div class="button2-text">Commander</div>
-                </div>
-            </button> 
-        </div>
-    </div>
-    </div>
+    <div class="but">
+        <div class="but2">
+            <div class="but2-text">Commander</div>
+        </div> 
+    </div>   
 
     
 
