--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </a>
                 </div>
                 <div class="footer-card">
-                    <a class="footer-a" href="#">
+                    <a class="footer-a" href="mailto:contact@ohmyfood.com">
                         <h5 class="footer-h5">Contact</h5>
                     </a>
                 </div>
