--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!--header-->
     <header>
         <div class="header-logo">
-            <span class="logo">
-                <img src="Images/logo/ohmyfood.png" alt="ohmyfood">
-            </span>
+            <div class="logo">
+                <div class="header-text">ohmyfood</div>
+            </div>
         </div>
     </header>
     
