--- a/delice.html
+++ b/delice.html
@@ -57,7 +57,7 @@
     <!--menu-->
     <div class="menu">
     
-        <div class="etrees">
+        <div class="entrees">
             <div class="entrees-header">
                 <h2 class="entrees-header-titre">ENTREES</h2>
             </div>
