--- a/note.html
+++ b/note.html
@@ -56,11 +56,11 @@
     <!--menu-->
     <div class="menu">
     
-        <div class="etrees">
+        <div class="entrees">
             <div class="entrees-header">
                 <h2 class="entrees-header-titre">ENTREES</h2>
             </div>
-            
+
         <div class="entrees-cards">
             <div class="entrees-card">
                 <div class="entrees-card-header">
