--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <form id="search-input">
                 <span class="icon">
                 <i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                    <a href="#">Paris, Belleville</a>      
+                    <p class="search-input-text">Paris, Belleville</p>      
             </form>
         </div>
     </div>
