twenty second commit

--- a/francaise.html
+++ b/francaise.html
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="entrees-cards">
-                        <div class="entrees-card card-1">
+                        <div class="entrees-card">
                             <div class="entrees-card-header">
                                 <h3 class="card-h3">Tartare de poulpe acidulé</h3>
                                 <p class="card-p">Aux zestes d'orange</p>
@@ -73,7 +73,7 @@
                                         <i class="fas fa-check-circle" aria-hidden="true"></i>
                                     </span>
                         </div>
-                        <div class="entrees-card card-2">
+                        <div class="entrees-card">
                             <div class="entrees-card-header">
                                 <h3 class="card-h3">Velouté de legumes d'antan</h3>
                                 <p class="card-p">Carotte,panais,topinambour</p>
@@ -83,7 +83,7 @@
                                         <i class="fas fa-check-circle" aria-hidden="true"></i>
                                     </span>   
                         </div>
-                        <div class="entrees-card card-3">
+                        <div class="entrees-card">
                             <div class="entrees-card-header">
                                 <h3 class="card-h3">Soupe à l'oignon</h3>
                                 <p class="card-p">Revisitée</p>
