--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
                                 <h4 class="restaurants-card-titre">La palette du gout</h4>
                                 <p class="restaurants-card-p">Ménilmontant</p>
                             </div>
-                            <div class="restaurants-card-icon">
-                                <i class="fa-regular fa-heart fa-2x"></i>
-                            </div>
+                            <span class="main-header-icon1">
+                                <i class="fas fa-heart" aria-hidden="true"></i></span>
+                            <span class="main-header-icon2">
+                                <i class="far fa-heart" aria-hidden="true"></i></span>
                         </div>
                     </div>
                 </a>              
@@ -130,9 +131,10 @@
                                 <h4 class="restaurants-card-titre">La note enchantée</h4>
                                 <p class="restaurants-card-p">Charonne</p> 
                             </div>  
-                            <div class="restaurants-card-icon">
-                                <i class="fa-regular fa-heart fa-2x"></i>
-                            </div>                
+                            <span class="main-header-icon1">
+                                <i class="fas fa-heart" aria-hidden="true"></i></span>
+                            <span class="main-header-icon2">
+                                <i class="far fa-heart" aria-hidden="true"></i></span>            
                         </div>
                     </div>
                 </a>
@@ -145,9 +147,10 @@
                                 <h4 class="restaurants-card-titre">A la française</h4>
                                 <p class="restaurants-card-p">Cité Rouge</p>
                             </div>
-                            <div class="restaurants-card-icon">
-                                <i class="fa-regular fa-heart fa-2x"></i>
-                            </div> 
+                            <span class="main-header-icon1">
+                                <i class="fas fa-heart" aria-hidden="true"></i></span>
+                            <span class="main-header-icon2">
+                                <i class="far fa-heart" aria-hidden="true"></i></span>
                         </div>
                     </div>
                 </a>
@@ -160,9 +163,10 @@
                                 <h4 class="restaurants-card-titre">Les délice des sens</h4>
                                 <p class="restaurants-card-p">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurants-card-icon">
-                                <i class="fa-regular fa-heart fa-2x"></i>
-                            </div> 
+                            <span class="main-header-icon1">
+                                <i class="fas fa-heart" aria-hidden="true"></i></span>
+                            <span class="main-header-icon2">
+                                <i class="far fa-heart" aria-hidden="true"></i></span>
                         </div>
                     </div>
                 </a>
